Refactor authentication and resource management
- Removed LoginPage component to streamline authentication process.
- Updated ResourceCatalogue, ResourceDetail, and ResourceForm to handle resource IDs as strings instead of numbers.
- Modified resourceService to accommodate string IDs and updated related methods accordingly.
- Enhanced pom.xml with JWT dependencies for improved security.
- Configured MongoDB auditing in MongoConfig and added JWT authentication filter and service.
- Implemented role-based access control in SecurityConfig.
- Updated ResourceController to validate string IDs and adjusted resource model to use string IDs.
- Created ResourceSeeder for initial resource population in the database.
- Enhanced UserService to support role management and JWT token generation.
- Refactored ResourceServiceImpl to utilize MongoDB queries instead of JPA specifications.